--- a/views/carts/index.hbs
+++ b/views/carts/index.hbs
@@ -2,7 +2,7 @@
     <h2 class="heading"><span>Your</span> cart</h2>
     <div class="cart-item">
         <div class="content">
-            <img src="images/menu-1.png" alt="" />
+            <img src="/images/menu-1.png" alt="" />
             <div class="des">
                 <h3>cart item 01</h3>
                 <div class="price">$15.99/-</div>
@@ -16,7 +16,7 @@
     </div>
     <div class="cart-item">
         <div class="content">
-            <img src="images/menu-5.png" alt="" />
+            <img src="/images/menu-5.png" alt="" />
             <div class="des">
                 <h3>cart item 01</h3>
                 <div class="price">$15.99/-</div>
@@ -30,7 +30,7 @@
     </div>
     <div class="cart-item">
         <div class="content">
-            <img src="images/menu-2.png" alt="" />
+            <img src="/images/menu-2.png" alt="" />
             <div class="des">
                 <h3>cart item 01</h3>
                 <div class="price">$15.99/-</div>
@@ -44,7 +44,7 @@
     </div>
     <div class="cart-item">
         <div class="content">
-            <img src="images/menu-4.png" alt="" />
+            <img src="/images/menu-4.png" alt="" />
             <div class="des">
                 <h3>cart item 01</h3>
                 <div class="price">$15.99/-</div>
@@ -58,7 +58,7 @@
     </div>
     <div class="cart-item">
         <div class="content">
-            <img src="images/menu-6.png" alt="" />
+            <img src="/images/menu-6.png" alt="" />
             <div class="des">
                 <h3>cart item 01</h3>
                 <div class="price">$15.99/-</div>
