--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
             </div>
 
             <div class="icons">
-                <div class="fas fa-search" id="search-btn"></div>
+                <div class="fas fa-user" id="search-btn"></div>
                 <a href="/carts"><div class="fas fa-shopping-cart" id="cart-btn"></div></a>
                 <div class="fas fa-bars" id="menu-btn"></div>
                 <button>Login</button> 
