--- a/views/menu/detail.hbs
+++ b/views/menu/detail.hbs
@@ -1,7 +1,7 @@
 <div class="container detail">
     <div class="row">
         <div class="col-4 img">
-            <img src="images/menu-2.png" alt="">
+            <img src="/images/menu-2.png" alt="">
         </div>
         <div class="col content">
             <h3 class="h3">Tasty and healthy</h3>
@@ -16,22 +16,22 @@
         <h2>Recommend...</h2>
         <div class="relavent">
             <div class="box">
-                <a href="/detail"><img src="images/menu-5.png" alt=""></a>
+                <a href="/menu/detail"><img src="/images/menu-5.png" alt=""></a>
                 <h3>tasty and healty</h3>
                 <div class="price">$15.99 <span>20.99</span></div>
-                <a href="/detail" class="btn1">add to cart</a>
+                <a href="/menu/detail" class="btn1">add to cart</a>
             </div>
             <div class="box">
-                <a href="/detail"><img src="images/menu-6.png" alt=""></a>
+                <a href="/menu/detail"><img src="/images/menu-6.png" alt=""></a>
                 <h3>tasty and healty</h3>
                 <div class="price">$15.99 <span>20.99</span></div>
-                <a href="/detail" class="btn1">add to cart</a>
+                <a href="/menu/detail" class="btn1">add to cart</a>
             </div>
             <div class="box">
-                <a href="/detail"><img src="images/menu-4.png" alt=""></a>
+                <a href="/menu/detail"><img src="/images/menu-4.png" alt=""></a>
                 <h3>tasty and healty</h3>
                 <div class="price">$15.99 <span>20.99</span></div>
-                <a href="/detail" class="btn1">add to cart</a>
+                <a href="/menu/detail" class="btn1">add to cart</a>
             </div>
         </div>
     </div>
@@ -41,7 +41,7 @@
             <div class="comments">
                 <div class="comment-box add-comment">
                     <span class="commenter-pic">
-                        <img src="images/pic-1.png" class="img-fluid">
+                        <img src="/images/pic-1.png" class="img-fluid">
                     </span>
                     <span class="commenter-name">
                         <input type="text" placeholder="Add a public comment" name="Add Comment">
@@ -51,7 +51,7 @@
                 </div>
                 <div class="comment-box">
                     <span class="commenter-pic">
-                        <img src="images/pic-2.png" class="img-fluid">
+                        <img src="/images/pic-2.png" class="img-fluid">
                     </span>
                     <span class="commenter-name">
                         <a href="#">Happy markuptag</a> <span class="comment-time">2 hours ago</span>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="comment-box">
                     <span class="commenter-pic">
-                        <img src="images/pic-3.png" class="img-fluid">
+                        <img src="/images/pic-3.png" class="img-fluid">
                     </span>
                     <span class="commenter-name">
                         <a href="#">Happy markuptag</a> <span class="comment-time">2 hours ago</span>
