--- a/views/menu/index.hbs
+++ b/views/menu/index.hbs
@@ -15,52 +15,52 @@
     </div>
     <div class="box-container">
         <div class="box">
-            <a href="/detail"><img src="images/menu-1.png" alt=""></a>
+            <a href="/menu/detail"><img src="/images/menu-1.png" alt=""></a>
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
-            <a href="/detail" class="btn1">add to cart</a>
+            <a href="/menu/detail" class="btn1">add to cart</a>
         </div>
         <div class="box">
-            <a href="/detail"><img src="images/menu-2.png" alt=""></a>
+            <a href="/menu/detail"><img src="/images/menu-2.png" alt=""></a>
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
-            <a href="/detail" class="btn1">add to cart</a>
+            <a href="/menu/detail" class="btn1">add to cart</a>
         </div>
         <div class="box">
-            <a href="/detail"><img src="images/menu-4.png" alt=""></a>
+            <a href="/menu/detail"><img src="/images/menu-4.png" alt=""></a>
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
-            <a href="/detail" class="btn1">add to cart</a>
+            <a href="/menu/detail" class="btn1">add to cart</a>
         </div>
         <div class="box">
-            <a href="/detail"><img src="images/menu-3.png" alt=""></a>
+            <a href="/menu/detail"><img src="/images/menu-3.png" alt=""></a>
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
-            <a href="/detail" class="btn1">add to cart</a>
+            <a href="/menu/detail" class="btn1">add to cart</a>
         </div>
         <div class="box">
-            <a href="/detail"><img src="images/menu-2.png" alt=""></a>
+            <a href="/menu/detail"><img src="/images/menu-2.png" alt=""></a>
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
-            <a href="/detail" class="btn1">add to cart</a>
+            <a href="/menu/detail" class="btn1">add to cart</a>
         </div>
         <div class="box">
-            <a href="/detail"><img src="images/menu-5.png" alt=""></a>
+            <a href="/menu/detail"><img src="/images/menu-5.png" alt=""></a>
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
-            <a href="/detail" class="btn1">add to cart</a>
+            <a href="/menu/detail" class="btn1">add to cart</a>
         </div>
         <div class="box">
-            <a href="/detail"><img src="images/menu-6.png" alt=""></a>
+            <a href="/menu/detail"><img src="/images/menu-6.png" alt=""></a>
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
-            <a href="/detail" class="btn1">add to cart</a>
+            <a href="/menu/detail" class="btn1">add to cart</a>
         </div>
         <div class="box">
-            <a href="/detail"><img src="images/menu-2.png" alt=""></a>
+            <a href="/menu/detail"><img src="/images/menu-2.png" alt=""></a>
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
-            <a href="/detail" class="btn1">add to cart</a>
+            <a href="/menu/detail" class="btn1">add to cart</a>
         </div>
 
 
