--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
  <header class="header">
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" alt="logo">
+                <img src="/images/logo.png" alt="logo">
             </div>
             <div class="menu-icons">
                 <a href="/">home</a>
@@ -11,7 +11,7 @@
             </div>
 
             <div class="icons">
-                <div class="fas fa-search" id="search-btn"></div>
+                <div class="fas fa-user" id="search-btn"></div>
                 <a href="/carts"><div class="fas fa-shopping-cart" id="cart-btn"></div></a>
                 <div class="fas fa-bars" id="menu-btn"></div>
                 <button>Login</button> 
