--- a/views/menu/detail.hbs
+++ b/views/menu/detail.hbs
@@ -75,12 +75,12 @@
         </div>
         <ul class="pagination">
             <li><a href="#" class="prev">
-                    < pre</a>
+                    < </a>
             </li>
             <li><a href="#" class="pageNumber">1</a></li>
             <li><a href="#" class="pageNumber">2</a></li>
             <li><a href="#" class="pageNumber">3</a></li>
-            <li><a href="#" class="next">Next ></a></li>
+            <li><a href="#" class="next">></a></li>
         </ul>
     </div>
 </div>
