--- a/views/menu/index.hbs
+++ b/views/menu/index.hbs
@@ -1,17 +1,19 @@
 <section class="main-menu">
 
     <h1 class="heading"> our <span>menu</span> </h1>
-     <div class="search-form">
-        <input type="search" id="search-box" placeholder="Search here..." />
-        <label for="search-box" class="fas fa-search"></label>
-      </div>
-    <div class="filter">
-        <ul>
-            <li class="list active" data-filter="All">all</li>
-            <li class="list" data-filter="Food">Food</li>
-            <li class="list" data-filter="Fruit juice">Fruit juice</li>
-            <li class="list" data-filter="Campuchino">Campuchino</li>
-        </ul>
+    <div class="filter-box">
+        <div class="search-form">
+            <input type="search" id="search-box" placeholder="Search here..." />
+            <label for="search-box" class="fas fa-search"></label>
+        </div>
+        <div class="filter">
+            <ul>
+                <li class="list active" data-filter="All">all</li>
+                <li class="list" data-filter="Food">Food</li>
+                <li class="list" data-filter="Fruit juice">Fruit juice</li>
+                <li class="list" data-filter="Campuchino">Campuchino</li>
+            </ul>
+        </div>
     </div>
     <div class="box-container">
         <div class="box">
@@ -67,7 +69,7 @@
     </div>
     <ul class="pagination">
         <li><a href="#" class="prev">
-                < pre</a>
+                < </a>
         </li>
         <li><a href="#" class="pageNumber">1</a></li>
         <li><a href="#" class="pageNumber">2</a></li>
@@ -75,6 +77,6 @@
         <li><a href="#" class="pageNumber">4</a></li>
         <li><a href="#" class="next">5</a></li>
 
-        <li><a href="#" class="prev">Next ></a></li>
+        <li><a href="#" class="prev"> ></a></li>
     </ul>
 </section>
