--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,13 +8,14 @@
                 <a href="#about">about</a>
                 <a href="/menu">menu</a>
                 <a href="#review">review</a>
+                <button>Login</button> 
             </div>
 
             <div class="icons">
-                <div class="fas fa-user" id="search-btn"></div>
+                <a href="/user"><div class="fas fa-user" id="search-btn"></div></a>
                 <a href="/carts"><div class="fas fa-shopping-cart" id="cart-btn"></div></a>
                 <div class="fas fa-bars" id="menu-btn"></div>
-                <button>Login</button> 
+                
             </div>
         </div>
     </header>
