--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,12 +28,7 @@ section {
     padding: 2rem 7%;
 }
 
-header {
-    position: absolute;
-    height: 9.5rem;
-    top: 0;right: 0; left: 0;
-    background: var(--black);
-}
+
 
 .heading {
     text-align: center;
@@ -86,6 +81,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background: var(--black);
     padding: 2rem  7% !important;
     z-index: 1000;
 }
@@ -130,6 +126,7 @@ header {
 
 #menu-btn {
     display: none;
+    cursor: pointer;
 }
 .navbar button {
     width: 150px;
@@ -239,6 +236,14 @@ header {
 .menu .linkto a:hover {
     color: var(--main-color);
 }
+
+.main-menu .filter-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
 .menu .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -673,14 +678,11 @@ header {
 
 
 .search-form {
-    position: absolute;
-    top: 11rem; right: 7%;
     background: #ccc;
     width: 50rem;
     height: 5rem;
     display: flex;
     align-items: center;
-
 }
 
 .search-form input {
@@ -913,4 +915,50 @@ header {
 
 .userinfo .row {
     background: #eee;
+}
+
+
+
+
+/* media queries */
+
+@media (max-width:911px) {
+    html {
+        font-size: 55%;
+    }
+
+    .navbar {
+        padding: 1.5rem 2rem;
+    }
+}
+
+@media (max-width:911px) {
+    #menu-btn {
+        display: inline-block;
+    }
+
+    .header .navbar .menu-icons{
+        position: absolute;
+        top: 100%; right: -100%;
+        background: var(--black);
+        width: 30rem;
+        height: calc(100vh - 9.5rem);
+        text-align: center;
+    }
+    .header .navbar .menu-icons.active{
+        right: 0;
+    }
+
+    .header .navbar a{
+        color: #ccc;
+        display: block;
+        margin: 1.5rem;
+        padding: .5rem;
+        font-size: 2rem;
+    }
+
+    .header .navbar .icons {
+        display: inline-flex;
+        align-items: center;
+    }
 }
