--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,6 +22,7 @@
   <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
+  <script defer src="/javascripts/script.js"></script>
 </head>
 <body>
   {{> header}}
